<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:visibility="visible"
    tools:visibility="visible" >
    <EditTextPreference
        android:icon="@drawable/ic_baseline_lock_24"
        android:key="username"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/email" />
    <EditTextPreference
        android:icon="@drawable/ic_baseline_alternate_email_24"
        android:key="password"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/password" />
    <PreferenceCategory android:title="@string/notification">

    </PreferenceCategory>
    <SwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_baseline_message_24"
        android:key="mail"
        android:title="@string/mail_notification" />
    <SwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_baseline_notifications_24"
        android:key="pushup"
        android:title="@string/push_notification" />


    <ListPreference
        android:defaultValue="6: 00 Uhr"
        android:entries="@array/time_label"
        android:entryValues="@array/time_data"
        android:icon="@drawable/ic_baseline_timer_24"
        android:key="pushuptime"
        android:title="@string/hour" />
    <ListPreference
        android:defaultValue="0min"
        android:entries="@array/minutes"
        android:entryValues="@array/minutesdata"
        android:icon="@drawable/ic_baseline_timer_24"
        android:key="pushupmin"
        android:title="@string/Minutes" />
    <PreferenceCategory android:title="@string/appointment">

        <SwitchPreference
            android:defaultValue="false"
            android:key="appointmentDelete"
            android:title="@string/oldAppointmentdelete" />
        <EditTextPreference
            android:key="appointmentDeleteAfter"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/deleteAfterDay" />
        <PreferenceCategory android:title="@string/Login">

        </PreferenceCategory>
        <SwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_baseline_security_24"
            android:key="ssl"
            android:title="TSL/SSL" />
    </PreferenceCategory>
    <EditTextPreference
        android:icon="@drawable/ic_baseline_api_24"
        android:key="ip"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="API IP" />
    <EditTextPreference
        android:icon="@drawable/ic_baseline_vpn_key_24"
        android:key="token"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="TOKEN" />
</PreferenceScreen>