<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="de.lukaskraemer.inkadigiman.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/notification_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Appointment_type"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/notification_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/notification_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/notification_notice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note"
            android:textSize="24sp" />

        <Button
            android:id="@+id/notification_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/show_task" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>