<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.lukaskraemer.inkadigiman.ui.task.ShowtaskFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_frag"
            android:layout_marginTop="@dimen/margin_frag"
            android:layout_marginRight="@dimen/margin_frag"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/add_task_tv_appointment_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Appointment_type"
                    android:textSize="24sp" />

                <Spinner
                    android:id="@+id/add_task_spinner1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:entries="@array/kindoftask"
                    android:prompt="@array/kindoftask2" />
            </LinearLayout>


            <DatePicker
                android:id="@+id/add_task_edit_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:calendarViewShown="true" />

            <TimePicker
                android:id="@+id/add_task_edit_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:timePickerMode="spinner" />

            <EditText
                android:id="@+id/add_task_edit_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:fontFamily="serif"
                android:hint="@string/Note_here"

                android:inputType="textMultiLine"
                android:textAlignment="viewStart"
                android:textColor="#fff" />

            <Button
                android:id="@+id/add_task_Btn_Save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="60dp"
                android:fontFamily="serif"
                android:text="@string/save" />

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>

